test/files/neg/t5390b.check
t5390b.scala:7: error: forward reference to value a defined on line 8 extends over definition of value b
    val b = a.B("")
            ^
1 error
